--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@headlessui/react": "^2.2.2",
     "@tailwindcss/vite": "^4.1.4",
+    "@yudiel/react-qr-scanner": "^2.2.1",
     "antd": "^5.24.9",
     "firebase": "^11.6.1",
+    "jsqr": "^1.4.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
